force-app/main/default/objects/KSVCReport__c/KSVCReport__c.object-meta.xml
<CustomObject>
    <label>KSVCReport</label>
    <nameField>
        <label>KSVCReport Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KSVCReport</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>