force-app/main/default/objects/KSVCReport__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change</label>
    <type>Checkbox</type>
</CustomField>