force-app/main/default/objects/KSVCReport__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <label>Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>