force-app/main/default/objects/KSVCReport__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>ProgramManagement__c</referenceTo>
    <relationshipLabel>KSVCReport</relationshipLabel>
    <relationshipName>KSVCReport</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>