force-app/main/default/objects/KSVCReport__c/fields/WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>WorkCategory__c</fullName>
    <label>WorkCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕様の理解 (Understanding Document)</fullName>
            </value>
            <value>
                <fullName>詳細設計書作成 （Detail document create)</fullName>
            </value>
            <value>
                <fullName>詳細設計書翻訳 (Document Translate)</fullName>
            </value>
            <value>
                <fullName>開発 (Source Coding)</fullName>
            </value>
            <value>
                <fullName>ソースレビュー (Source Review)</fullName>
            </value>
            <value>
                <fullName>単体テスト仕様書作成 (Create TestCase)</fullName>
            </value>
            <value>
                <fullName>単体テスト仕様書レビュー (Testcase review)</fullName>
            </value>
            <value>
                <fullName>単体テスト仕様書翻訳 (TestCase Translate)</fullName>
            </value>
            <value>
                <fullName>テストクラス作成 (Create TestClass)</fullName>
            </value>
            <value>
                <fullName>テストクラスレビュー (TestClass Review)</fullName>
            </value>
            <value>
                <fullName>単体テスト実施 (UT Evidence)</fullName>
            </value>
            <value>
                <fullName>単体テスト結果レビュー (UT Evidence Review)</fullName>
            </value>
            <value>
                <fullName>QA回答待ちetc (QA Waiting)</fullName>
            </value>
            <value>
                <fullName>その他(Other)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>