force-app/main/default/objects/KSVCReport__c/fields/WorkerName2__c.field-meta.xml
<CustomField>
    <fullName>WorkerName2__c</fullName>
    <label>WorkerName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>