force-app/main/default/objects/KSVCReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>WorkerName2__c</columns>
    <columns>WorkCategory__c</columns>
    <columns>Date__c</columns>
    <columns>Costs__c</columns>
    <columns>Change__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>